k8s-manifests/k8s-securecam.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securecam
---
# trunk-ignore(checkov/CKV_K8S_43)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securecam
  namespace: securecam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securecam
  template:
    metadata:
      labels:
        app: securecam
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        runAsGroup: 10000
        fsGroup: 10000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: securecam
          image: ghcr.io/jeromba6/securecam:0.7.0
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - name: securecam-data
              mountPath: /data/securecam
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: securecam-data
          persistentVolumeClaim:
            claimName: securecam-pvc
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: securecam
  namespace: securecam
spec:
  type: NodePort
  selector:
    app: securecam
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-securecam-access
  namespace: securecam
spec:
  podSelector:
    matchLabels:
      app: securecam
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
